[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UpgradeScreen.gd" type="Script" id=1]

[node name="UpgradeScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -48.5
margin_right = -21.0
margin_bottom = 54.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FireRate" type="Button" parent="Panel/HBoxContainer"]
margin_right = 127.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+10% Fire Rate"
expand_icon = true

[node name="Magazine" type="Button" parent="Panel/HBoxContainer"]
margin_left = 131.0
margin_right = 258.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1 Magazine"

[node name="Reload" type="Button" parent="Panel/HBoxContainer"]
margin_left = 262.0
margin_right = 389.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-10% Reload"

[node name="NumBullets" type="Button" parent="Panel/HBoxContainer"]
margin_left = 393.0
margin_right = 520.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Additional Bullet"

[node name="Bounce" type="Button" parent="Panel/HBoxContainer"]
margin_left = 524.0
margin_right = 651.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1 Bounce"

[node name="EnemyBullet" type="Button" parent="Panel/HBoxContainer"]
margin_left = 655.0
margin_right = 814.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1 Enemy Death Bullet"

[node name="EnemyBounce" type="Button" parent="Panel/HBoxContainer"]
margin_left = 818.0
margin_right = 987.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+1 Enemy Bullet Bounce"

[node name="Label" type="Label" parent="Panel"]
margin_left = 254.0
margin_top = 87.0
margin_right = 643.0
margin_bottom = 152.0
text = "Upgrades Left: "
